--- a/app/views/ecommerce/checkout/finalize.haml
+++ b/app/views/ecommerce/checkout/finalize.haml
@@ -12,6 +12,7 @@
                 = render 'edit_review_detail_item', header: 'Expected Delivery', items: ['Sep 2-9, 2017']
               .outline-container__split
                 = render 'edit_review_detail_item', header: 'Order Date', items: ['Aug 21, 2017']
+            -# TODO Where does this go?
             %button.btn.btn-primary.mb6{onClick: 'alert("TODO");'} View Details
 
   = render "debug", customer_order: @customer_order
