[#151844305] Added pagination for orders

--- a/app/views/my_account/orders/index.haml
+++ b/app/views/my_account/orders/index.haml
@@ -14,6 +14,7 @@
             = options_for_select options, params.dig(:search, :filter)
   .row
     .col-xs-12
+      = paginate(@orders)
       %table.table
         %thead
           %tr
