--- a/app/views/ecommerce/checkout/_edit_review_detail_items.haml
+++ b/app/views/ecommerce/checkout/_edit_review_detail_items.haml
@@ -3,4 +3,4 @@
     - address_items = [@customer_order.recipient_name, @customer_order.ship_street1, @customer_order.ship_street2, "#{@customer_order.ship_city}, #{@customer_order.ship_state} #{@customer_order.ship_zip}"]
     = render 'edit_review_detail_item', header: 'Shipping Address', items: address_items
   .col-xs-12.col-sm-6
-    = render 'edit_review_detail_item', header: 'Shipping Method', items: ['TODO']
+    = render 'edit_review_detail_item', header: 'Shipping Method', items: [@customer_order.shipping_choice.titleize]
