--- a/app/views/ecommerce/checkout/_edit_review_summary_item.haml
+++ b/app/views/ecommerce/checkout/_edit_review_summary_item.haml
@@ -1,9 +1,9 @@
 .co-ro-summary__item.clearfix
   %div= label
-  - if value_in_cents
+  - if value_in_dollars
     - if co_attr
-      %div= number_to_currency @customer_order.send(co_attr)/100.0
+      %div= number_to_currency @customer_order.send(co_attr)
     - else
-      %div= number_to_currency value/100.0
+      %div= number_to_currency value
   - elsif value
     %div= value
