icon for Wrapt with Love. Can use =embedded_svg('icon-page', xlink_class: 'icon-page') to include and then styles can be set on .icon-page, including hover styling

--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -127,6 +127,6 @@ svg.recommendation__icon-liked path {
   stroke: inherit;
   stroke-weight: inherit;
 }
-// #icon-close .st0 {
-//   fill: $gray-010;
-// }
+.icon-page {
+  color: $blue-002;
+}
