--- a/app/views/my_account/giftees/index.haml
+++ b/app/views/my_account/giftees/index.haml
@@ -16,8 +16,10 @@
         = giftee.gifts_sent
 
         - if giftee.finished_surveys?
-          VIEW #{0} RECOMMENDATIONS
+          = link_to giftee_gift_recommendations_path(giftee) do
+            VIEW #{giftee.gift_recommendations.count} RECOMMENDATIONS
         - else
-          COMPLETE THE QUIZ
-
-
+          :ruby
+            question_response = giftee.first_unanswered_response
+          = link_to giftee_survey_question_path(giftee_id: giftee.id, survey_id: question_response.survey_response_id, id: question_response.to_param) do
+            COMPLETE THE QUIZ
