--- a/app/views/admin/gifts/_form.html.haml
+++ b/app/views/admin/gifts/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for( [:admin, @gift], html: {data: {behavior: 'form-loads-subcategories'}}) do |f|
-  = f.error_notification
+  = f.error_notification message: @error_message
 
   .form-inputs
     = f.input :title
@@ -11,20 +11,29 @@
           .input-group-addon $
           = f.input_field :selling_price, class: 'form-control', disabled: @gift.calculate_price_from_products?, value: number_with_precision(f.object.selling_price, precision: 2)
         = f.input :calculate_price_from_products, label: 'Auto-Calculate Price from Products'
+
         = f.input :cost, wrapper: :vertical_input_group do
           .input-group-addon $
           = f.input_field :cost, class: 'form-control', disabled: @gift.calculate_cost_from_products?, value: number_with_precision(f.object.cost, precision: 2)
         = f.input :calculate_cost_from_products, label: 'Auto-Calculate Cost from Products'
+
+        = f.input :weight_in_pounds, wrapper: :vertical_input_group do
+          .input-group-addon lb
+          = f.input_field :weight_in_pounds, class: 'form-control', disabled: @gift.calculate_weight_from_products?, value: number_with_precision(f.object.weight_in_pounds, precision: 2)
+        = f.input :calculate_weight_from_products, label: 'Auto-Calculate weight from Products'
+
         %h3 Category
         = f.association :product_category, as: :select, collection: ProductCategory.categories, input_html: {data: {behavior: 'product-category-input'}}
         = f.association :product_subcategory, as: :select, collection: (@gift.product_category&.children || []), input_html: {data: {behavior: 'product-subcategory-input'}}
         = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
 
         = f.fields_for :pretty_parcels do |gp|
+          = gp.input :id, as: :hidden
           = gp.input :parcel_id, collection: Parcel.active.pretty.all, value_method: :id, label_method: :description, input_html: {}, label: 'Gift Box'
           = gp.input :gift_id, as: :hidden, value: @gift.id
 
         = f.fields_for :shipping_parcels do |gp|
+          = gp.input :id, as: :hidden
           = gp.input :parcel_id, collection: Parcel.active.shipping.all, value_method: :id, label_method: :description, input_html: {}, label: 'Shipping Box'
           = gp.input :gift_id, as: :hidden, value: @gift.id
 
