[#151858864] disable submit on address form until required fields are filled in

--- a/app/views/ecommerce/checkout/edit_address.haml
+++ b/app/views/ecommerce/checkout/edit_address.haml
@@ -23,7 +23,7 @@
                 = f.input :ship_state, label: 'State'
               .col-xs-12.col-md-2
                 = f.input :ship_zip, label: 'Zip Code'
-          %button.btn.btn-primary{type: 'submit'}
+          %button.btn.btn-primary{type: 'submit', disabled: @customer_purchase.things_look_shipable? ? 'false' : 'true'}
             = "Next <svg class='btn__icon-caret-right'><use xlink:href='#icon-caret-right'></use></svg>".html_safe
 
   = render "debug", customer_order: @customer_order
@@ -47,4 +47,6 @@
       ]
       App.ClearForm('customer_order', input_names, '[name="customer_order[ship_to]"]', false)
       App.ClearForm('customer_order', input_names, '[name="customer_order[address_id]"]', 'new_address')
+
+      App.EnableSubmitButton('customer_order', ['ship_street1', 'ship_city', 'ship_state', 'ship_zip'])
     })
