--- a/app/views/customer_order_mailer/order_received.html.haml
+++ b/app/views/customer_order_mailer/order_received.html.haml
@@ -1,4 +1,58 @@
-%p
-  Hello #{@user.full_name},
-  %br
-  Your order has been received.
+-# TODO: replace img url w/full urls for app
+-# TODO: replace product img src
+-# TODO: other todo's noted in this email
+%body{style: "background-color: #fff; font-family: Helvetica, Arial, sans-serif;"}
+  %table{style: "background-color: #F2F5F9; max-width: 700px; margin: 0 auto;"}
+    %tr
+      %td{style: "padding: 40px;"}
+        %h1{style: "font-size: 28px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center; color: #4D4C4D; margin-bottom: 14px;"}
+          %img{src: "http://localhost:3000/email-signature-images/heart-24.png", style: "padding-right: 12px; vertical-align: middle;"}
+          We're getting your Wrapt order ready to ship
+        %p{style: "text-align: center; font-size: 24px; color: #4D4C4D; font-weight: normal; line-height: 1.75;"}
+          Order Number: [todo: add order number]
+        %table{style: "margin: 60px auto 40px; border: 1px solid #E2E2E2; max-width: 600px;"}
+          %tr
+            %td{style: "padding: 12px 24px; text-align: left; vertical-align: top; width: 50%"}
+              %table{style: "border: none; margin: 0; padding:0"}
+                %tr
+                  %td{style: "text-align: left; vertical-align: middle; width: 88px;"}
+                    %img{src: "http://via.placeholder.com/88x59", style: "width: 88px"}
+                  %td{style: "text-align: left; vertical-align: middle; padding-left: 4px;"}
+                    %p{style: "padding-bottom: 0; font-size: 16px; font-weight: normal; font-family: Helvetica, Arial, sans-serif;  color: #4D4C4D;"}
+                      todo: add gift title
+            %td{style: "padding: 12px 24px; text-align: right; vertical-align: top; width: 50%;"}
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; color: #4D4C4D;"}
+                Status
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; color: #767676;"}
+                todo: add gift status, e.g. Order Received 
+        %table{style: "margin: 60px auto 40px; border: 1px solid #E2E2E2; max-width: 600px;"}
+          %tr
+            %td{style: "padding: 12px 24px; text-align: left; vertical-align: top; width: 50%"}
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; color: #4D4C4D;"}
+                Order Date
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; color: #767676;"}
+                todo: add order date, in format: Aug 21, 2017
+            %td{style: "padding: 12px 24px; text-align: left; vertical-align: top; width: 50%"}
+              %p{style: "padding-bottom: 6px; font-size: 13px; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; color: #4D4C4D;"}
+                Order Total
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; color: #767676;"}
+                todo: add order total, in format: $30.00
+        %table{style: "margin: 60px auto 40px; border: 1px solid #E2E2E2; max-width: 600px;"}
+          %tr
+            %td{style: "padding: 12px 24px; text-align: left; vertical-align: top; width: 50%"}
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; color: #4D4C4D;"}
+                Shipping To
+              %p{style: "font-size: 13px; font-family: Helvetica, Arial, sans-serif; color: #767676; line-height: 1.1;"}
+                todo: add shippee name
+                %br
+                todo: shipping street
+                %br
+                todo: shipping city, state, postal code
+            %td{style: "padding: 12px 24px; text-align: left; vertical-align: top; width: 50%"}
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; color: #4D4C4D;"}
+                Expected Delivery
+              %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; color: #767676;"}
+                todo: add expected date, format: Sep 2-9, 2017
+    %tr
+      %td{style: "padding-bottom: 60px; text-align: center;"}
+        %img{src: "http://localhost:3000/email-signature-images/logo-with-love.png", style: "padding-right: 12px; vertical-align: middle;"}
