--- a/app/views/admin/ecommerce/dashboard/index.haml
+++ b/app/views/admin/ecommerce/dashboard/index.haml
@@ -6,12 +6,12 @@
   .col-sm-12
     %table.table
       %tr
-        %td= link_to 'Inventory', admin_ecommerce_inventory_items_path, class: 'btn btn-default btn-xs'
+        %td= link_to 'Inventory', admin_ecommerce_inventory_items_path
       %tr
-        %td= link_to 'Customer Orders', admin_ecommerce_customer_orders_path, class: 'btn btn-default btn-xs'
+        %td= link_to 'Customer Orders', admin_ecommerce_customer_orders_path
       %tr
-        %td= link_to 'Vendor Purchase Orders', admin_ecommerce_purchase_orders_path, class: 'btn btn-default btn-xs'
+        %td= link_to 'Vendor Purchase Orders', admin_ecommerce_purchase_orders_path
       %tr
-        %td= link_to 'Vendor Billing', admin_ecommerce_billings_path, class: 'btn btn-default btn-xs'
+        %td= link_to 'Vendor Billing', admin_ecommerce_billings_path
       %tr
-        %td= link_to 'Stats', admin_ecommerce_stats_path, class: 'btn btn-default btn-xs'
+        %td= link_to 'Stats', admin_ecommerce_stats_path
