--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -1,5 +1,11 @@
 @import "helpers";
 
+.wrapt-with-love-link svg {
+  width: 16px;
+  height: 16px;
+  vertical-align: bottom;
+}
+
 #co-progress-bar {
   position: relative;
 }
